fixed overlapping pubs

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
 
 .publications {
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: 10%;
   width: 77%;
   float: left;
@@ -191,19 +191,18 @@ p {
   margin-block-end: 0;
 }
 
-#pub-header {
-  float: left;
+.pub-header {
+  overflow: auto;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
-.pub-first-title {
-  display: block;
-  float: right;
+.pub-info {
   text-align: right;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  padding-left: 5px;
+  display: block;
+  margin-bottom: 40px;
+  overflow: visible;
 }
 
 .pub-title {
@@ -215,19 +214,11 @@ p {
   border-bottom-style: solid;
   border-bottom-width: 1px;
   padding-left: 5px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 .pub-first-info {
-  text-align: right;
-  display: block;
-}
-
-.pub-header {
-  overflow: auto;
-  width: 100%
-}
-
-.pub-info {
   text-align: right;
   display: block;
 }
@@ -306,8 +297,8 @@ p {
       display: block;
       width: 100%;
       margin-top: 0px;
-      margin-bottom: 10px;
-      overflow: hidden;
+      margin-bottom: 30px;
+      overflow: visible;
     }
     .pub-info p {
       margin-block-start: 0em;
